# pycharm-youtrack-repro

./: README.md  main.py  pyproject.toml
foolib/: main.py
