[tool.poetry]
name = "pycharm-youtrack-repro"
version = "0.1.0"
description = "Toy repo containing projects with PyCharm but reproductions"
authors = ["Russell Snyder <ru.snyder@gmail.com>"]
packages = []

[tool.poetry.dependencies]
python = "~3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
