[tool.poetry]
name = "pycharm-youtrack-repro"
version = "0.1.0"
description = "Toy repo containing projects with PyCharm but reproductions"
authors = ["Russell Snyder <ru.snyder@gmail.com>"]
packages = []

[tool.poetry.dependencies]
python = "~3.8"

alembic = "1.8.1"
authlib = "1.0.1"
black = "22.6.0"
boto3 = "1.24.46"
cached-property = "1.5.2"
dash = "2.6.1"
dash-bootstrap-components = "1.2.1"
dash-daq = "0.5.0"
dash-extensions = "0.1.5"
email-validator = "1.2.1"
flask = "2.1.2"
flask-cors = "3.0.10"
isort = "5.10.1"
palettable = "3.3.0"
pandas = "1.4.3"
pomegranate = "0.14.8"
psycopg = "3.1"
psycopg-c = "3.1"
psycopg2 = "2.9.3"
pyagrum = "1.3.0"
pydantic = "1.8.2"
python-dotenv = "0.20.0"
python-slugify = "6.1.2"
pyyaml = "6.0"
requests = "2.28.1"
scikit-learn = "1.1.1"
scipy = "1.9.0"
sqlalchemy = "1.4.40"
sqlalchemy-utils = "0.38.3"
structlog = "22.1.0"
unicode = "2.9"

# TODO: Move to thirdparty dependency
frozendict = "2.3.4"
httpx = "0.23.0"
netaddr = "0.8.0"
numpy = "1.23.1"
pysubnettree = "0.35"
redis = "4.3.4"
tldextract = "3.3.1"
tld = "0.12.6"
tqdm = "4.64.0"
validators = "0.20.0"
xgboost = "1.6.1"


[tool.poetry.dev-dependencies]
ipython = "8.4.0"
poethepoet = "0.16.0"
pytest = "7.1.2"
pytest-cov = "3.0.0"
pytest-postgresql = "4.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
