[tool.poetry]
name = "pycharm-youtrack-repro-deps"
version = "0.1.0"
description = "Branch used to simulate a depended-upon repo"
authors = ["Russell Snyder <ru.snyder@gmail.com>"]
packages = [
  { include = "foolib" },
]


[tool.poetry.dependencies]
python = "~3.8"

frozendict = "2.3.4"
httpx = "0.23.0"
netaddr = "0.8.0"
numpy = "1.23.1"
pysubnettree = "0.35"
redis = "4.3.4"
tldextract = "3.3.1"
tld = "0.12.6"
tqdm = "4.64.0"
validators = "0.20.0"
xgboost = "1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
